shopify theme related changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>ring-builder</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="r-builder-app"></div>
+    <div id="r-builder-app-choose-setting"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/choose-setting.tsx"></script>
   </body>
 </html>
